# hugging_hat

./: .gitignore  CONTEXT.md  README.md  flake.nix  justfile  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  PRD-hat-training-v0.md  hat-checkpoint-format.md  training-api-v0.md
src/hugging_hat/: __init__.py  cli.py  config.py  data.py  hf.py  model.py  persistence.py  tokenizer.py
src/hugging_hat/hats/: __init__.py  critic.py  norm.py  router.py  thinker.py
src/hugging_hat/testing/: dummy_hf.py  smoke.py
src/hugging_hat/train/: __init__.py  collate.py  config.py  device.py  freeze.py  loop.py  seed.py  step.py
tests/: test_cli_train_thinker.py  test_cli_train_thinker_hf.py  test_data_hf.py  test_data_jsonl.py  test_dummy_round_trip.py  test_hat_persistence.py  test_tokenizer.py  test_train_device.py  test_train_logging.py  test_train_resume.py  test_train_seed.py  test_train_thinker.py
