[project]
name = "hugging-hat"
version = "0.1.0"
description = "A hugging hat project"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "click>=8.1.7",
]

[project.optional-dependencies]
hf = [
    "transformers>=4.48",
]
torch = [
    "torch>=2.1",
    "safetensors>=0.4",
    # torch cu118 wheels (2.2.x) are built against the NumPy 1.x ABI; NumPy 2
    # triggers an import-time ABI crash. Constrain until torch is upgraded.
    "numpy<2",
]
yaml = [
    "pyyaml>=6.0.1",
]
train = [
    "accelerate>=0.33",
    "datasets>=2.20",
    "tqdm>=4.66",
]
test = [
    "pytest>=8.0",
]

[project.scripts]
hh = "hugging_hat.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
