[project]
name = "hugging-hat"
version = "0.1.0"
description = "A hugging hat project"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "click>=8.1.7",
]

[project.optional-dependencies]
hf = [
    "transformers>=5.9",
]
torch = [
    "torch>=2.7",
    "torchvision>=0.22",
    "torchaudio>=2.7",
    "safetensors>=0.7",
]
yaml = [
    "pyyaml>=6.0.1",
]
train = [
    "accelerate>=1.13",
    "datasets>=4.8",
    "tqdm>=4.66",
]
test = [
    "pytest>=8.0",
]

[project.scripts]
hh = "hugging_hat.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
